<resources>
    <string name="app_name">Multishop</string>

    <!-- Drawer Left -->
    <string name="sparkle_store">Multishop</string>
    <string name="drawer_des">Khám phá những thiết bị gaming tốt nhất cùng Multishop</string>
    <string name="drawer_sign_in"><u><![CDATA[ĐĂNG NHẬP NGAY ]]></u></string>
    <string name="drawer_scan">QUÉT QR THANH TOÁN</string>
    <string name="drawer_account">THÔNG TIN TÀI KHOẢN</string>
    <string name="drawer_bag">GIỎ HÀNG</string>
    <string name="drawer_order">ĐƠN HÀNG CỦA TÔI</string>
    <string name="drawer_save">YÊU THÍCH</string>
    <string name="drawer_model">CHẾ ĐỘ TỐI</string>
    <string name="drawer_set">CÀI ĐẶT</string>
    <string name="drawer_offline">CỬA HÀNG TRỰC TIẾP</string>
    <string name="drawer_contact">LIÊN HỆ VỚI CHÚNG TÔI</string>
    <string name="drawer_out">ĐĂNG XUẤT</string>
    <string name="please_sign_first">Bạn chưa đăng nhập</string>
    <string name="confirm_log_out">Bạn có chắc chắn muốn đăng xuất?</string>
    <string name="no_log_tip">Please login first</string>

    <!-- Main Page-->
    <string name="title_home">Trang chủ</string>
    <string name="title_catalogue">Danh mục</string>
    <string name="title_new_in">Khuyến mãi</string>
    <string name="recommendation">Gợi ý cho bạn</string>
    <string name="sys_integrity_detecting">Detecting…</string>
    <string name="sys_integrity_detect_success">System integrity is OK</string>
    <string name="welcome">Welcome</string>
    <string name="first_press_back">Nhấn quay lại lần nữa để thoát</string>
    <string name="notice">test</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- ProductActivity -->
    <string name="product_no_wifi">Video cannot be played without Wifi connection. You can connect to Wifi and restart the app.</string>
    <string name="current_position">%d/%d</string>
    <string name="product_color">Loại sản phẩm</string>
    <string name="product_version">Hãng sản xuất</string>
    <string name="product_capacity">Chi tiết sản phẩm</string>
    <string name="product_count">Số lượng</string>
    <string name="product_send">Mô tả</string>
    <string name="product_address">Locating</string>
    <string name="customer_evaluation">Đánh giá</string>
    <string name="add_shop_car">Thêm vào giỏ hàng</string>
    <string name="add_to_favorite">Yêu thích</string>
    <string name="buy_now">Mua ngay</string>
    <string name="no_product_tip">No Product</string>
    <string name="add_to_car_success">Add Successfully</string>
    <string name="empty_address">empty address</string>
    <string name="Specs_head">Thông số kỹ thuật</string>
    <string name="cart">Giỏ hàng</string>
    <!-- CatalogueFragment -->
    <string name="no_product">Không có sản phẩm nào.</string>

    <string name="cancel">Huỷ</string>
    <string name="confirm">Xác nhận</string>
    <string name="cart_title">Giỏ hàng của bạn</string>
    <string name="string_login_first">Xin đăng nhập trước</string>
    <string name="llb_no_items_in_your_cart">\"Hổng\" có gì trong giỏ hết !!</string>
    <string name="lbl_shop_now">Mua sắm ngay</string>
    <string name="confirm_order">Bạn đã kiểm tra đúng thông tin và chắc chắn muốn đặt hàng</string>
    <string name="confirm_cart_item_delete">Bạn chắc chắn muốn xoá sản phẩm khỏi Giỏ hàng ?</string>
    <string name="order_center_order_number">Mã đơn hàng: %d</string>
    <string name="order_center_pending_payment_time">Chưa xác nhận</string>
    <string name="order_center_total">"%d sản phẩm, Tổng đơn: "</string>
    <string name="welcome_user">Xin chào: %s</string>
    <string name="already_rate">Đã đánh giá: %s</string>
    <string name="title_rate_product">Đánh giá sản phẩm</string>
    <string name="check_delete_history">Bạn có chắc chắn muốn xoá lịch sử tìm kiếm ?</string>
    <string name="llb_no_items_in_order_center">\"Hổng\" có đơn nào cả !!!</string>
    <string name="order_center_cancel_order">Huỷ đơn</string>
    <string name="order_center_confirm_cancel_order">Bạn có chắc chắn muốn huỷ đơn hàng ?</string>
    <string name="order_cancel_infor">Đơn hàng: %d</string>
    <string name="cancel_time">Đã huỷ: %s</string>
    <string name="string_version">Phiên bản %s</string>

    <string-array name="search_hot">
        <item>Laptop Asus</item>
        <item>Di động Samsung</item>
        <item>Smart Tivi</item>
        <item>Đồng hồ thông minh</item>
        <item>Kính thực tế ảo</item>
        <item>LG</item>
    </string-array>
</resources>