<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:icon="@drawable/tab_icon_home_selector"
        app:showAsAction="always"
        android:title="@string/title_home" />

    <item
        android:id="@+id/category"
        android:icon="@drawable/tab_icon_category_selector"
        app:showAsAction="always"
        android:title="@string/title_catalogue" />

    <item
        android:id="@+id/new_in"
        android:icon="@drawable/tab_icon_new_in_selector"
        app:showAsAction="always"
        android:title="@string/title_new_in" />

    <item
        android:id="@+id/user"
        android:icon="@drawable/tab_icon_user_selector"
        app:showAsAction="always"
        android:title="Tài khoản" />

</menu>