<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F8FC">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            style="@style/viewParent.headerText"
            android:text="Tài khoản" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layout_welcome">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileCircleImageView"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="10dp"
                android:src="@mipmap/head_load"
                app:civ_border_color="@color/colorAccent"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/tv_user_name"
                style="@style/viewParent.headerText"
                android:layout_marginTop="20dp"
                android:layout_toEndOf="@id/profileCircleImageView"
                android:text="@string/welcome_user"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_user_info"
                style="@style/viewParent.headerText"
                android:layout_below="@id/tv_user_name"
                android:layout_toEndOf="@id/profileCircleImageView"
                android:text="Chỉnh sửa thông tin"
                android:textColor="#5D5C5C"
                android:textSize="16sp" />

            <ImageView
                style="@style/viewParent"
                android:src="@drawable/ic_baseline_arrow_forward_ios_24"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:background="#F7F8FC">

            <TextView
                android:gravity="center"
                android:id="@+id/tv_sign_in"
                style="@style/profileStyledBackButton"
                android:text="@string/drawer_sign_in"
                android:textColor="@color/white" />
        </RelativeLayout>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/darkModeSwitch"
            style="@style/settingsText"
            android:drawableStart="@drawable/ic_dark_mode"
            android:minHeight="48dp"
            android:text="Dark Mode" />

        <TextView
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:text="Mua hàng"/>

        <TextView
            android:id="@+id/lv_bag"
            style="@style/viewParent.headerText.settingsTextIcon"
            android:text="@string/drawer_bag"
            app:drawableLeftCompat="@drawable/ic_cart" />

        <TextView
            android:id="@+id/lv_order"
            style="@style/viewParent.headerText.settingsTextIcon"
            android:layout_marginTop="10dp"
            android:text="@string/drawer_order"
            app:drawableLeftCompat="@drawable/ic_order" />

        <TextView
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:text="Cài đặt"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            style="@style/settingsText"
            android:checked="true"
            android:drawableStart="@drawable/ic_notifications"
            android:minHeight="48dp"
            android:text="THÔNG BÁO" />

        <TextView
            android:id="@+id/lv_contact"
            style="@style/viewParent.headerText.settingsTextIcon"
            android:text="@string/drawer_contact"
            app:drawableLeftCompat="@drawable/ic_about_us" />

        <TextView
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:text="Tài khoản"/>

        <TextView
            android:id="@+id/lv_out"
            style="@style/viewParent.headerText.settingsTextIcon"
            android:text="@string/drawer_out"
            app:drawableLeftCompat="@drawable/ic_logout" />


        <TextView
            android:id="@+id/tv_version"
            style="@style/viewParent.headerText.settingsMiniTitle"
            android:text="@string/string_version"
            android:textAlignment="center"/>

    </LinearLayout>
</ScrollView>